<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Settings">
        <Preference
            android:icon="@drawable/ic_baseline_refresh_24"
            android:key="@string/pref_restart"
            android:title="Restart launcher"
            android:summary="Apply new changes to the launcher" />
        <SwitchPreference
            android:icon="@drawable/ic_baseline_tv_24"
            android:key="@string/pref_default_external"
            android:title="Default to external display"
            android:summary="Open apps on the external display by default" />
        <SwitchPreference
            android:icon="@drawable/ic_baseline_screen_rotation_24"
            android:key="@string/pref_rotation"
            android:title="Enable rotation"
            android:summary="Rotate the launcher according to the device orientation" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Customization">
        <SwitchPreference
            android:icon="@drawable/ic_baseline_short_text_24"
            android:key="@string/pref_icon_labels"
            android:title="Enable icon labels"
            android:summary="Display app names below their icon"
            android:defaultValue="true" />
        <SwitchPreference
            android:icon="@drawable/ic_baseline_crop_24"
            android:key="@string/pref_circle_crop"
            android:title="Enable circle crop"
            android:summary="Cut icons into uniform circles"
            android:defaultValue="false" />
        <EditTextPreference
            android:icon="@drawable/ic_baseline_color_lens_24"
            android:key="@string/pref_background_color"
            android:title="Background color"
            android:summary="Hex color including alpha for window backgrounds"
            android:defaultValue="#88000000" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:icon="@drawable/ic_baseline_person_24"
            android:title="Developer"
            android:summary="tytydraco (Tyler Nijmeh)"
            android:key="@string/pref_developer"/>
        <Preference
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:key="@string/pref_view_store"
            android:title="View store page"
            android:summary="View this app on the Google Play Store" />
        <Preference
            android:icon="@drawable/ic_baseline_code_24"
            android:key="@string/pref_github"
            android:title="View GitHub source"
            android:summary="View the source code for this app" />
        <Preference
            android:icon="@drawable/ic_baseline_email_24"
            android:key="@string/pref_contact"
            android:title="Contact"
            android:summary="Send me an email for support or feedback" />
        <Preference
            android:icon="@drawable/ic_baseline_insert_drive_file_24"
            android:key="@string/pref_licenses"
            android:title="Licenses"
            android:summary="View the open source licenses used by this app" />
    </PreferenceCategory>
</PreferenceScreen>